--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Index.cshtml
@@ -13,7 +13,7 @@
         <h1 class="govuk-heading-l">@Model.Title</h1>
 
         @* todo: we don't have an add service page yet *@
-        <p>View existing services@(Model.OrganisationTypeContent)@* or <a>add services</a>*@.</p>
+        <p>View existing services@(Model.OrganisationTypeContent) or <a href="/manage-services/start-add-service">add a service</a>.</p>
     </div>
 </div>
 
