order addresses in drop down

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -37,7 +37,7 @@
                     {
                         <!option value="@location.Id"
                                  @(location.Id == Model.SelectedLocationId ? "selected" : "")
-                                 >@string.Join(", ", location.GetAddress())</!option>
+                                 >@string.Join(", ", location.Description)</!option>
                     }
                 </select>
             </div>
