--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -150,9 +150,8 @@
                         @(location.LocationTypeCategory == LocationTypeCategory.FamilyHub ? "Yes" : "No")
                     </summary-list-row>
 
-                    <summary-list-row key="Location details" show-empty class="fh-pre-wrap">
-                        @location.Description
-                    </summary-list-row>
+                    <summary-list-row key="Location details" show-empty class="fh-pre-wrap"
+                        >@location.Description</summary-list-row>
 
                 </summary-list>
             }
