add 'add location' link and update content

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@Model.Title</h1>
-        <p>@Model.SubTitle</p>
+        <p>@Model.SubTitle or <a href="/manage-locations/start-add-location">add a new location</a>.</p>
     </div>
 </div>
 
