update fh packages

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -15,7 +15,7 @@
         </h1>
 
         <summary-list>
-            <summary-list-row key="Name" action1="Change" action1-Href="/MyAccount/ChangeName">@Model.FullName</summary-list-row>
+            <summary-row key="Name" action1="Change" action1-Href="/MyAccount/ChangeName">@Model.FullName</summary-row>
         </summary-list>
 
         <p><a class="govuk-link--no-visited-state" href="@Model.GovOneLoginAccountPage">Manage your GOV.UK One Login details</a></p>
