--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @using FamilyHubs.SharedKernel.Identity
-@using FamilyHubs.SharedKernel.Razor.SummaryList
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_DetailsModel
 @{
     string title, cta;
@@ -35,21 +34,21 @@
         }
 
         <summary-list>
-            <summary-list-row key="Address" show-empty action1="Change"
+            <summary-row key="Address" show-empty action1="Change"
                               action1-href="@Model.GetLocationPageUrl(LocationJourneyPage.Location_Address, Model.Journey, linkFlow)">
                 @string.Join(", ", Model.GetAddress())
-            </summary-list-row>
+            </summary-row>
             
             @if (Model.FamilyHubsUser.Role is not (RoleTypes.VcsDualRole or RoleTypes.VcsManager))
             {
-                <summary-list-row key="Family hub" show-empty action1="Change"
+                <summary-row key="Family hub" show-empty action1="Change"
                                   action1-href="@Model.GetLocationPageUrl(LocationJourneyPage.Family_Hub, Model.Journey, linkFlow)">
                     @(Model.LocationModel!.IsFamilyHub!.Value ? "Yes" : "No")
-                </summary-list-row>
+                </summary-row>
             }
 
-            <summary-list-row key="More details" show-empty class="fh-pre-wrap" action1="Change"
-                              action1-href="@Model.GetLocationPageUrl(LocationJourneyPage.Location_Information, Model.Journey, linkFlow)">@Model.LocationModel!.Description</summary-list-row>
+            <summary-row key="More details" show-empty class="fh-pre-wrap" action1="Change"
+                              action1-href="@Model.GetLocationPageUrl(LocationJourneyPage.Location_Information, Model.Journey, linkFlow)">@Model.LocationModel!.Description</summary-row>
         </summary-list>
         
         @if (Model.Flow != JourneyFlow.Edit || Model.LocationModel!.Updated)
