--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -148,8 +148,7 @@
                         @(location.LocationTypeCategory == LocationTypeCategory.FamilyHub ? "Yes" : "No")
                     </summary-row>
 
-                    <summary-row key="Location details" show-empty class="fh-pre-wrap"
-                        >@location.Description</summary-row>
+                    <summary-row key="Location details" show-empty class="fh-pre-wrap">@location.Description</summary-row>
 
                 </summary-list>
             }
