--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
+@using FamilyHubs.ServiceDirectory.Shared.Display
+@using FamilyHubs.ServiceDirectory.Shared.Enums
+@using FamilyHubs.SharedKernel.Razor.Summary
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Locations_For_ServiceModel
 @{
     string title = $"Locations for {Model.ServiceModel!.Name}";
@@ -24,12 +28,15 @@
                     ++locationIndex;
                     <summary-card title="Location @locationIndex"
                                   action1="Remove location from this service" action1-href="#">
-                        <summary-row key="Address" class="fh-pre-wrap">location.GetAddress()</summary-row>
-                        <summary-row key="Family hub"></summary-row>
-                        <summary-row key="Location details" class="fh-pre-wrap"></summary-row>
-                        <summary-row key="Days service is available"
+                        <summary-row key="Address" class="fh-pre-wrap">@string.Join(", ", location.GetAddress())</summary-row>
+                        <summary-row key="Family hub">
+                            @* todo: common, add to display code *@
+                            @(location.LocationTypeCategory == LocationTypeCategory.FamilyHub ? "Yes" : "No")
+                        </summary-row>
+                        <summary-row key="Location details" class="fh-pre-wrap">@location.Description</summary-row>
+                        <summary-row key="Days service is available" show-empty
                                      action1="Change" action1-href="#"></summary-row>
-                        <summary-row key="Service availability details" class="fh-pre-wrap"
+                        <summary-row key="Service availability details" show-empty class="fh-pre-wrap"
                                      action1="Change" action1-href="#"></summary-row>
                     </summary-card>
                 }
