--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -167,16 +167,36 @@
             </summary-list-row>
 
             <summary-list-row key="Service availability details" show-empty class="fh-pre-wrap"
-                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, linkFlow)"
-            >@service.TimeDescription</summary-list-row>
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, linkFlow)">@service.TimeDescription</summary-list-row>
         </summary-list>
 
         <h2 class="govuk-heading-m">Further information</h2>
         <summary-list>
+            <summary-list-row key="Contact details" show-empty class="fh-pre-wrap" action1="Change"
+                              action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Contact, linkFlow)">
+                @if (service.HasEmail)
+                {
+                    @service.Email <br />
+                }
+                @if (service.HasTelephone)
+                {
+                    @service.TelephoneNumber <br />
+                }
+                @if (service.HasWebsite)
+                {
+                    @service.Website <br />
+                }
+                @if (service.HasTextMessage)
+                {
+                    @service.TextTelephoneNumber <br />
+                }
+
+            </summary-list-row>
+
             <summary-list-row key="More details" show-empty class="fh-pre-wrap" action1="Change"
                               action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_More_Details, linkFlow)">@service.MoreDetails</summary-list-row>
         </summary-list>
-        
+
         @if (Model.Flow != JourneyFlow.Edit || Model.ServiceModel!.Updated)
         {
             <form method="post" novalidate>
