--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -172,7 +172,7 @@
 
         <h2 class="govuk-heading-m">Further information</h2>
         <summary-list>
-            <summary-list-row key="Contact details" show-empty class="fh-pre-wrap" action1="Change"
+            <summary-list-row key="Contact details" show-empty action1="Change"
                               action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Contact, linkFlow)">
                 @if (service.HasEmail)
                 {
