--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -37,8 +37,14 @@
                             @(location.LocationTypeCategory == LocationTypeCategory.FamilyHub ? "Yes" : "No")
                         </summary-row>
                         <summary-row key="Location details" class="fh-pre-wrap">@location.Description</summary-row>
+                        @*todo: options: link to interstitial page that saves params and redirects
+                        add support to summary-row for actions to be submit buttons
+                        link to actual page, which either stores params in cache (usermodel), query string or hidden form fields
+                        links to actual/interstitial will have to check location id is associated with service
+                        would an interstitial interfere with history? single interstitial with destination in query params?
+                        *@
                         <summary-row key="Days service is available" show-empty
-                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location, linkFlow))">Todo: add when available</summary-row>
+                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location, linkFlow))&locationId=@location.Id">Todo: add when available</summary-row>
                         <summary-row key="Service availability details" show-empty class="fh-pre-wrap"
                                      action1="Change" action1-href="#">Todo: add when available</summary-row>
                     </summary-card>
