--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-at-location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-at-location.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = Model.Title;
 }
 
-@* @section Back {
+@section Back {
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
-} *@
+}
 
 <partial name="_CheckboxesPage" model="Model" />
