--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-at-location-content.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-at-location-content.cshtml
@@ -1,3 +1,3 @@
-﻿<h1 class="govuk-heading-l">On which days can people use this service at [location]?</h1>
+﻿<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
 <p>Let people know about the days when this service is available here. You can provide more specific details about availability on the next page.</p>
