--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using FamilyHubs.SharedKernel.Identity
+@using FamilyHubs.SharedKernel.Razor.Summary
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_DetailsModel
 @{
     string title, cta;
