--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -8,7 +8,7 @@
 
     //todo: this common bit of code needs to be somewhere common - ServicePageModel?
     var linkFlow = Model.Flow;
-    string redo = ServiceJourneyPage.Locations_For_Service.GetPageUrl();
+    string redo = ServiceJourneyPage.Locations_For_Service.GetSlug();
 }
 
 @section Back {
