--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -47,11 +47,11 @@
             }
             <div class="govuk-button-group">
                 <button type="submit" class="govuk-button" data-module="govuk-button"
-                        name="action" value="Continue">
+                        name="@Locations_For_ServiceModel.SubmitAction" value="@Locations_For_ServiceModel.SubmitAction_Continue">
                     Continue
                 </button>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
-                        name="action" value="AddAnotherLocation">
+                        name="@Locations_For_ServiceModel.SubmitAction" value="@Locations_For_ServiceModel.SubmitAction_AddAnotherLocation">
                     Add another location
                 </button>
             </div>
