--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -118,6 +118,7 @@
             @if (service.Locations.Any())
             {
                 <summary-row key="Locations" show-empty>
+                             @*action1="Add or remove" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Locations_For_Service, linkFlow)">*@
                     @service.Locations.Count @(service.Locations.Count == 1 ? "Location" : "Locations")
                 </summary-row>
             }
