--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using FamilyHubs.ServiceDirectory.Shared.Enums
 @using FamilyHubs.ServiceDirectory.Shared.ReferenceData.ICalendar
 @using FamilyHubs.SharedKernel.Enums
 @using FamilyHubs.SharedKernel.Razor.Summary
@@ -147,7 +148,10 @@
                     <summary-row key="Days service is available" show-empty
                                  action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location, linkFlow))&locationId=@location.Id&redo=@redo">
                         @* todo: move to common display code *@
-                        @string.Join(", ", location.Times!.Select(c => Calendar.DayCodeToName[c]))
+                        @if (location.Times != null)
+                        {
+                            @string.Join(", ", location.Times.Select(c => Calendar.DayCodeToName[c]))
+                        }
                     </summary-row>
                     @*todo: same data, different key to location-for-service page*@
                     <summary-row key="Extra availability details" show-empty class="fh-pre-wrap"
@@ -157,19 +161,23 @@
             }
         }
 
-        @*@if (service.HowUse.Any(hu => hu is AttendingType.Online or AttendingType.Telephone))*@
+        @if (service.HowUse.Any(hu => hu is AttendingType.Online or AttendingType.Telephone)
+             || (service.HowUse.Contains(AttendingType.InPerson) && !service.Locations.Any()))
+        {
+            <h2 class="govuk-heading-m">[Heading todo]</h2>
+            <summary-list>
+                <summary-row key="Days service is available" show-empty
+                             action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times, linkFlow)">
+                    @if (service.Times != null)
+                    {
+                        @string.Join(", ", service.Times.Select(c => Calendar.DayCodeToName[c]))
+                    }
+                </summary-row>
 
-        <h2 class="govuk-heading-m">[Heading todo]</h2>
-        <summary-list>
-            <summary-row key="Days service is available" show-empty
-                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times, linkFlow)">
-                @string.Join(", ", service.Times!.Select(c => Calendar.DayCodeToName[c]))
-            </summary-row>
-
-            <summary-row key="Service availability details" show-empty class="fh-pre-wrap"
-                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, linkFlow)"
-            >@service.TimeDescription</summary-row>
-        </summary-list>
+                <summary-row key="Service availability details" show-empty class="fh-pre-wrap"
+                             action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Time_Details, linkFlow)">@service.TimeDescription</summary-row>
+            </summary-list>
+        }
 
         <h2 class="govuk-heading-m">Further information</h2>
         <summary-list>
